[Manila] pre-upgrade resource creation and post-procedure validation
There's a need to create a Manila share resource before the upgrade
process and then validate the share after the process is complete.
To achieve this objective, it is essential to incorporate support for
the Manila client, a task that is accomplished through this commit.

Change-Id: I0d520e40a1a491ee864e707d63413d10035b99ca

--- a/roles/tobiko-cleanup/tasks/main.yaml
+++ b/roles/tobiko-cleanup/tasks/main.yaml
@@ -38,3 +38,11 @@
         grep "^tobiko\." | \
         xargs -r {{ openstack_cmd }} image delete
   ignore_errors: yes
+
+- name: "cleanup Manila shares created by Tobiko tests"
+  shell: |
+    source {{ stackrc_file }}
+    openstack share list -f value -c 'Name' | \
+        grep "^tobiko" | \
+        xargs -r openstack share delete --force
+  ignore_errors: yes
