--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ python-designateclient>=4.4.0   # Apache-2.0
 python-glanceclient>=3.2.2      # Apache-2.0
 python-heatclient>=2.3.0        # Apache-2.0
 python-ironicclient>=4.6.1      # Apache-2.0
+python-manilaclient>=4.5.1      # Apache-2.0
 python-neutronclient>=7.2.1     # Apache-2.0
 python-novaclient>=17.2.1       # Apache-2.0
 python-octaviaclient>=2.2.0     # Apache-2.0
