--- a/tox.ini
+++ b/tox.ini
@@ -172,6 +172,15 @@ setenv =
     OS_TEST_PATH = {toxinidir}/tobiko/tests/functional
 
 
+[testenv:manila]
+basepython = {[integration]basepython}
+envdir = {[integration]envdir}
+passenv = {[integration]passenv}
+setenv =
+    {[integration]setenv}
+    OS_TEST_PATH = {toxinidir}/tobiko/tests/scenario/manila
+
+
 [testenv:scenario]
 
 basepython = {[integration]basepython}
