Fix cleanup Loadbalancers task from tobiko-cleanup role
Deleting Loadbalancer should be done one by one. The command fails if
more than one LB is used

Change-Id: Icd316cd410f8f94ab99136817c1fe45b68aa77e9

--- a/roles/tobiko-cleanup/tasks/main.yaml
+++ b/roles/tobiko-cleanup/tasks/main.yaml
@@ -1,9 +1,10 @@
 ---
 - name: "cleanup Loadbalancers created by Tobiko tests"
   shell: |
-    {{ openstack_cmd }} loadbalancer list -f value -c 'name' | \
-        grep "^tobiko\." | \
-        xargs -r {{ openstack_cmd }} loadbalancer delete --cascade --wait
+    for lb in $({{ openstack_cmd }} loadbalancer list -f value -c 'name' | grep "^tobiko\.")
+    do
+        {{ openstack_cmd }} loadbalancer delete --cascade --wait $lb
+    done
   ignore_errors: yes
 
 - name: "cleanup Heat stacks created by Tobiko tests"
