Add conditional trunk port
When vm is created, the trunk port may not have been created first.
By adding this conditional, vm depends on the existing trunk port.

Change-Id: I069698b869633007f49110463658c858236c9f32

--- a/tobiko/openstack/stacks/nova/server.yaml
+++ b/tobiko/openstack/stacks/nova/server.yaml
@@ -136,7 +136,10 @@ resources:
       image: {get_param: image}
       flavor: {get_param: flavor}
       networks:
-        - port: {get_resource: port}
+        if:
+        - "has_vlan"
+        - [port: {get_attr: [trunk, port_id]}]
+        - [port: {get_resource: port}]
       scheduler_hints: {get_param: scheduler_hints}
       config_drive: {get_param: config_drive}
       user_data_format: RAW
