Add support to skip tests from CLI
With this patch, a new pytest optional arg has been added:
--skipregex

When it is used, tests are skipped when the regex is found in their test
names. Fully qualified test names are used for this search. Example:
tobiko.tests.unit.test_exception.TestException.test_init

It can be used from CLI with pytest like this:
$ .tox/py3/bin/pytest \
  --skipregex='test_join_chunks_.*_bytes|test_join_chunks_with_unicodes' \
  tobiko/tests/unit

It can be used from CLI with tox like this:
$ PYTEST_ADDOPTS="--skipregex='test_join_chunks_.*_bytes|test_join_chunks_with_unicodes'" \
  TOX_PYTHON=python3.9 \
  tox -e py3

It can be used from the Tobiko Infrared plugin by using the following
option (limitation: the skipregex is applied to all the steps from the
the executed Tobiko workflow):
$ infrared tobiko ... --pytest-addopts "--skipregex='test_join_chunks_.*_bytes|test_join_chunks_with_unicodes'"

It can be used from a zuul job by configuring the following variable
within the zuul job yaml file (limitation: the skipregex is applied to
all the steps from the executed Tobiko workflow):
pytest_addopts_global: "--skipregex='test_join_chunks_.*_bytes|test_join_chunks_with_unicodes'"

Change-Id: I8ee32ba467bd70142816953598d1736fa353d3d0

--- a/roles/tobiko-tox/defaults/main.yaml
+++ b/roles/tobiko-tox/defaults/main.yaml
@@ -36,7 +36,8 @@ tox_expected_rcs:
   - '{{ tox_succeeded_rc }}'
 ignore_test_failures: no
 
-pytest_addopts: ''
+pytest_addopts: '{{ pytest_addopts_global }}'
+pytest_addopts_global: ''
 pytest_markers: "{% if not test_flaky%}not flaky{% endif %}"
 pytest_maxfail: ''
 test_flaky: false
