Manila share_protocol value can be configured
The tobiko infrared plugin allows to configure a value for manila
share_protocol within tobiko.conf

Change-Id: I5dc4923ede35958be80c1a3c1e25d30aa6325060

--- a/roles/tobiko-configure/defaults/main.yaml
+++ b/roles/tobiko-configure/defaults/main.yaml
@@ -21,6 +21,9 @@ test_default_conf:
     ubuntu_connection_timeout: "{{ ubuntu_connection_timeout }}"
     ubuntu_is_reachable_timeout: "{{ ubuntu_is_reachable_timeout }}"
 
+  manila:
+    share_protocol: "{{ manila_share_protocol }}"
+
 test_log_debug: ''
 
 test_case_timeout: 1800.
@@ -40,3 +43,5 @@ ceph_rgw: ''
 
 ubuntu_connection_timeout: ''
 ubuntu_is_reachable_timeout: ''
+
+manila_share_protocol: ''
