Fix cleanup octavia LBs
Change-Id: I805b0d434e2c2f204645eff8c9e38ce825b2e405

--- a/roles/tobiko-cleanup/tasks/main.yaml
+++ b/roles/tobiko-cleanup/tasks/main.yaml
@@ -1,7 +1,7 @@
 ---
 - name: "cleanup Loadbalancers created by Tobiko tests"
   shell: |
-    for lb in $({{ openstack_cmd }} loadbalancer list -f value -c 'name' | grep "^tobiko\.")
+    for lb in $({{ openstack_cmd }} loadbalancer list -f value -c 'name' | grep "^tobiko")
     do
         {{ openstack_cmd }} loadbalancer delete --cascade --wait $lb
     done
