Run openstack command to apply quotas from the undercloud
Without this patch, the openstack commands are executed from the
tester_node, which is not necessarily the undercloud node.

Change-Id: I80ce48f416f474f24fe1a1b12c0883d58d3ac1d0

--- a/infrared_plugin/roles/tobiko-ir-before-run/tasks/main.yaml
+++ b/infrared_plugin/roles/tobiko-ir-before-run/tasks/main.yaml
@@ -5,6 +5,7 @@
     source {{ stackrc_file }}
     openstack quota set --{{ item.key }} {{ item.value }} $OS_PROJECT_NAME
   with_dict: "{{ quota | default({}) }}"
+  delegate_to: "{{ groups.undercloud|first }}"
 
 - name: ensure auto ssh key exchange in test host
   block:
