[tobiko-docker] Force docker version is lower than 7
tobiko-docker jobs use docker-compose to build docker images. With
docker version 7.0.0, some issues have been found when the docker-compose
command is executed.
This patch installs docker version lower than 7.

Change-Id: Idf1701b12d5ccf7ccf732225f9a748246d5c0800

--- a/roles/tobiko-ensure-docker-compose/tasks/main.yaml
+++ b/roles/tobiko-ensure-docker-compose/tasks/main.yaml
@@ -1,11 +1,13 @@
 ---
 
 - block:
-  - name: install latest Docker compose using pip
+  - name: install Docker compose using pip
     become: true
-    shell: |
-      set -x
-      python3 -m pip install docker-compose
+    pip:
+      name: "{{ item }}"
+    with_items:
+      - "docker<7.0"
+      - "docker-compose"
 
   - name: get docker compose location path
     shell: which docker-compose
