Added HOME env variable to tox testenv
This is necessary because some openhift modules search for the
$HOME/.kube/config file and fail because they cannot find it.

Change-Id: I9ab53ffdc0ac86dd903aa1c5f2b0b52f521c3097

--- a/tox.ini
+++ b/tox.ini
@@ -20,6 +20,7 @@ passenv =
     TOBIKO_*
     TOX_*
     PYTEST_*
+    HOME
 setenv =
     OS_LOG_CAPTURE = {env:OS_LOG_CAPTURE:true}
     OS_STDOUT_CAPTURE = {env:OS_STDOUT_CAPTURE:true}
