--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ openstacksdk>=0.31.2            # Apache-2.0
 oslo.concurrency>=3.26.0        # Apache-2.0
 oslo.config>=8.4.0              # Apache-2.0
 oslo.log>=4.4.0                 # Apache-2.0
+oslo.utils>=4.12.3              # Apache-2.0
 packaging>=20.4                 # Apache-2.0
 paramiko>=2.9.2                 # LGPLv2.1
 pbr>=5.5.1                      # Apache-2.0
