Use upper-constraints in the Tobiko ansible roles
In Tobiko we have roles to e.g. ensure that tox is installed. It uses
pip but it didn't use upper-constraints.txt file from the OpenStack
requirements and that could cause some issues, especially on e.g. older
operating systems, see related bug for example.

With this patch those ansible roles which uses pip to install some
python packages will use upper-constraints file if it exists in the file
system (in the u/s CI it will exist).

This patch also lowers min tox version for stable/2023.1 and stable/zed
branches are those should still use tox 3.28

Closes-Bug: #2057492
Change-Id: I147770a7949c59ba61b8dcca23d5c6fbbacb2606

--- a/roles/tobiko-bindep/tasks/ensure-bindep.yaml
+++ b/roles/tobiko-bindep/tasks/ensure-bindep.yaml
@@ -1,8 +1,16 @@
 ---
 
+- name: "check if upper-constraints file exists"
+  stat:
+    path: "{{ openstack_requirements_dir }}/upper-constraints.txt"
+  register: upper_constraints_file
+
+
 - name: "ensure Bindep is installed"
   command: >
-    '{{ python_executable }}' -m pip install --user 'bindep>={{ bindep_min_version }}'
+    '{{ python_executable }}' -m pip install \
+    {% if upper_constraints_file.stat.exists == true %}-c'{{ upper_constraints_file.stat.path }}'{% endif %} \
+    --user bindep>='{{ bindep_min_version }}'
   register: install_bindep
   changed_when: "'Successfully installed' in install_bindep.stdout"
 
