Update openstack branch to stable/zed
Tobiko osp-16.2 branch used openstack branch stable/wallaby, which is
EOL now.

Change-Id: If0009ddb2c8a41be603bdde07c08bb639adae921

--- a/zuul.d/project.yaml
+++ b/zuul.d/project.yaml
@@ -15,8 +15,8 @@
         - devstack-tobiko-functional:
             # NOTE(slaweq): OSP-16.2 is based on the stable/train but some
             # projects, like e.g. Nova already EOL'ed stable/train so lets use
-            # stable/wallaby here instead
-            override-checkout: stable/wallaby
+            # stable/zed here instead
+            override-checkout: stable/zed
             nodeset: openstack-single-node-focal
             vars:
               devstack_localrc:
@@ -24,8 +24,8 @@
         - devstack-tobiko-sanity:
             # NOTE(slaweq): OSP-16.2 is based on the stable/train but some
             # projects, like e.g. Nova already EOL'ed stable/train so lets use
-            # stable/wallaby here instead
-            override-checkout: stable/wallaby
+            # stable/zed here instead
+            override-checkout: stable/zed
             nodeset: openstack-single-node-focal
             vars:
               devstack_localrc:
