Fix ovn_migration and ovn_migration_sanity testenvs
For some reason, an env variable's (RUN_TESTS_EXTRA_ARGS) default value
was not properly overwritten on these testenvs.
Its default value has been removed, since it's not relevant for other
testenvs.

Besides this, the marker skip_during_ovn_migration has been added to the
test test_equal_containers_state because it should not be executed after
ovn-migration (list of containers changes, so comparison between
previous and new containers is not relevant).

Also, the background ping test will be skipped for ovn_migration and
ovn_migration_sanity testenvs because the may be traffic loss during the
migration process.

Change-Id: I71de87e5216ac2d6c7e198ea6236fe189b79408d

--- a/tox.ini
+++ b/tox.ini
@@ -26,9 +26,9 @@ setenv =
     OS_STDOUT_CAPTURE = {env:OS_STDOUT_CAPTURE:true}
     OS_STDERR_CAPTURE = {env:OS_STDERR_CAPTURE:true}
     OS_TEST_PATH = {toxinidir}/tobiko/tests/unit
+    TOBIKO_TEST_PATH = {env:OS_TEST_PATH}
     PYTEST_TIMEOUT = {env:PYTEST_TIMEOUT:300}
     PYTHONWARNINGS = ignore::Warning,{env:PYTHONWARNINGS:}
-    RUN_TESTS_EXTRA_ARGS = {env:OS_TEST_PATH}
     TOBIKO_PREVENT_CREATE = {env:TOBIKO_PREVENT_CREATE:false}
     TOX_COVER = {env:TOX_COVER:false}
     TOX_COVER_DIR = {env:TOX_COVER_DIR:{toxinidir}/cover}
@@ -39,7 +39,7 @@ setenv =
     TOX_EXTRA_REQUIREMENTS = {env:TOX_EXTRA_REQUIREMENTS:-r{toxinidir}/extra-requirements.txt}
     VIRTUAL_ENV = {envdir}
 commands =
-    {envpython} {toxinidir}/tools/run_tests.py {posargs:{env:RUN_TESTS_EXTRA_ARGS}}
+    {envpython} {toxinidir}/tools/run_tests.py {posargs:{env:TOBIKO_TEST_PATH}}
 
 
 [testenv:py3]
@@ -230,7 +230,9 @@ passenv = {[integration]passenv}
 setenv =
     {[testenv:scenario]setenv}
     OS_TEST_PATH = {toxinidir}/tobiko/tests/scenario
-    RUN_TESTS_EXTRA_ARGS = -m "not skip_during_ovn_migration and not flaky" {env:OS_TEST_PATH}
+    RUN_TESTS_EXTRA_ARGS = -m "not skip_during_ovn_migration and not background and not flaky"
+commands =
+    {envpython} {toxinidir}/tools/run_tests.py {env:RUN_TESTS_EXTRA_ARGS} {posargs:{env:TOBIKO_TEST_PATH}}
 
 [testenv:nova]
 
@@ -269,7 +271,9 @@ envdir = {[integration]envdir}
 passenv = {[integration]passenv}
 setenv =
     {[testenv:sanity]setenv}
-    RUN_TESTS_EXTRA_ARGS = -m "ovn_migration and not skip_during_ovn_migration and not flaky" {env:OS_TEST_PATH}
+    RUN_TESTS_EXTRA_ARGS = -m "ovn_migration and not skip_during_ovn_migration and not background and not flaky"
+commands =
+    {envpython} {toxinidir}/tools/run_tests.py {env:RUN_TESTS_EXTRA_ARGS} {posargs:{env:TOBIKO_TEST_PATH}}
 
 
 [testenv:shiftstack_sanity]
