--- a/pytest.ini
+++ b/pytest.ini
@@ -5,6 +5,7 @@ markers =
   ovn_migration: test cases for testing OVN migration
   minimal: most relevant and lightweight test cases
   skip_during_ovn_migration: test cases which shouldn't be run in the OVS to OVN migration jobs
+  background: test traffic loss using a background process sending pings to a VM instance
 
 
 # rp_uuid = 887ab577-b89e-4b12-9d8f-03f7a0a5b14a
