Fix tox testenvs with incorrect test paths
So far, we had a few tox testenvs that were having both OS_TEST_PATH and
were assigned testenv:<different testenv> path, which overrode the final
OS_TEST_PATH that was assigned to them.

This patch fixes those incorrect test paths.

Depends-On: https://review.opendev.org/c/x/devstack-plugin-tobiko/+/923828
Change-Id: If4dd26445e0939b945418297cc3996a5efb83963

--- a/tox.ini
+++ b/tox.ini
@@ -229,7 +229,7 @@ basepython = {[integration]basepython}
 envdir = {[integration]envdir}
 passenv = {[integration]passenv}
 setenv =
-    {[testenv:scenario]setenv}
+    {[integration]setenv}
     OS_TEST_PATH = {toxinidir}/tobiko/tests/scenario
     RUN_TESTS_EXTRA_ARGS = -m "not skip_during_ovn_migration and not background and not flaky"
 commands =
@@ -261,8 +261,9 @@ basepython = {[integration]basepython}
 envdir = {[integration]envdir}
 passenv = {[integration]passenv}
 setenv =
-    {[testenv:sanity]setenv}
+    {[integration]setenv}
     OS_TEST_PATH = {toxinidir}/tobiko/tests/sanity/neutron
+    PYTEST_TIMEOUT = 1800
 
 
 [testenv:ovn_migration_sanity]
@@ -283,8 +284,9 @@ basepython = {[integration]basepython}
 envdir = {[integration]envdir}
 passenv = {[integration]passenv}
 setenv =
-    {[testenv:sanity]setenv}
+    {[integration]setenv}
     OS_TEST_PATH = {toxinidir}/tobiko/tests/sanity/shiftstack
+    PYTEST_TIMEOUT = 1800
 
 
 [testenv:faults]
@@ -305,8 +307,10 @@ basepython = {[integration]basepython}
 envdir = {[integration]envdir}
 passenv = {[integration]passenv}
 setenv =
-    {[testenv:faults]setenv}
+    {[integration]setenv}
     OS_TEST_PATH = {toxinidir}/tobiko/tests/faults/octavia
+    TOX_NUM_PROCESSES = 1
+    PYTEST_TIMEOUT = 3600
 
 
 [testenv:neutron_faults]
@@ -315,8 +319,10 @@ basepython = {[integration]basepython}
 envdir = {[integration]envdir}
 passenv = {[integration]passenv}
 setenv =
-    {[testenv:faults]setenv}
+    {[integration]setenv}
     OS_TEST_PATH = {toxinidir}/tobiko/tests/faults/neutron
+    TOX_NUM_PROCESSES = 1
+    PYTEST_TIMEOUT = 3600
 
 
 [testenv:ha_faults]
