add KUBECONFIG to tox.ini for OSP18
Change-Id: Ibc953fe99a5215b208db6d10699a04b1b5ac97ab

--- a/tox.ini
+++ b/tox.ini
@@ -21,6 +21,7 @@ passenv =
     TOX_*
     PYTEST_*
     HOME
+    KUBECONFIG
 setenv =
     OS_LOG_CAPTURE = {env:OS_LOG_CAPTURE:true}
     OS_STDOUT_CAPTURE = {env:OS_STDOUT_CAPTURE:true}
