Fix issues with upstream jobs
setuptools version is pinned to 70.3.0 to resolve an issue
related to this ticket:
https://github.com/pypa/setuptools/issues/4483

pylint version is forced to >=3.3.0, where max-positional-arguments
functionality has been added and max-positional-arguments is set to 16:
https://github.com/pylint-dev/pylint/pull/9842

Changes in functional test test_stateless_sec_group_list_find because
sec group lists from a sec group can be ordered differently each time
a request is sent to obtain them.

Changed custom_mtu_size default value from 1350 to 1300 because some
tests started failing on some jobs with:
"Requested MTU is too big, maximum is 1314"

Change-Id: Ie92d9a2f4e0dd08aeadfd720bdf4963b532decf3

--- a/.pylintrc
+++ b/.pylintrc
@@ -845,6 +845,9 @@ ignored-parents=
 # Maximum number of arguments for function / method.
 max-args=5
 
+# Maximum number of positional arguments for function / method (default=5.)
+max-positional-arguments = 16
+
 # Maximum number of attributes for a class (see R0902).
 max-attributes=7
 
