--- a/tox.ini
+++ b/tox.ini
@@ -349,6 +349,30 @@ setenv =
     PYTEST_TIMEOUT = 3600
 
 
+[testenv:podified_faults]
+
+basepython = {[integration]basepython}
+envdir = {[integration]envdir}
+passenv = {[integration]passenv}
+setenv =
+    {[integration]setenv}
+    OS_TEST_PATH = {toxinidir}/tobiko/tests/faults/podified
+    TOX_NUM_PROCESSES = 1
+    PYTEST_TIMEOUT = 3600
+
+
+[testenv:podified_ha_faults]
+
+basepython = {[integration]basepython}
+envdir = {[integration]envdir}
+passenv = {[integration]passenv}
+setenv =
+    {[integration]setenv}
+    OS_TEST_PATH = {toxinidir}/tobiko/tests/faults/podified/ha
+    TOX_NUM_PROCESSES = 1
+    PYTEST_TIMEOUT = 3600
+
+
 # --- CI workflow test environments -------------------------------------------
 
 [testenv:infrared]
