Customize downloaded Ubuntu images
Instead of making tobiko customize Ubuntu images during test execution,
the Tobiko ansible roles run before that will do it.

Related: #TOBIKO-126

Change-Id: I5c6746c6ad488eb4b27164faea67a5c0253f15f3

--- a/roles/tobiko-configure/tasks/main.yaml
+++ b/roles/tobiko-configure/tasks/main.yaml
@@ -25,6 +25,11 @@
         - section: "{{ dict_value.type }}"
           option: image_url
           value: "file://{{ download_images_dir }}/{{ file_name }}"
+        {%   if dict_value.customized | default(False) | bool or dict_value.customize_command_pattern is defined %}
+        - section: "{{ dict_value.type }}"
+          option: customized_image_provided
+          value: True
+        {%   endif %}
         {% endfor %}
   vars:
     sections: "{{ test_default_conf | combine(test_conf, recursive=True) }}"
