--- a/roles/tobiko-common/defaults/main.yaml
+++ b/roles/tobiko-common/defaults/main.yaml
@@ -59,6 +59,18 @@ test_collect_dir: '{{ test_src_dir | realpath }}/{{ test_report_name }}'
 # --- download-images options -------------------------------------------------
 download_images_dir: "{{ ansible_user_dir }}/.downloaded-images"
 download_images:
-  ubuntu-minimal:
+  ubuntu-customized:
     type: ubuntu
     url: "https://cloud-images.ubuntu.com/minimal/releases/jammy/release/ubuntu-22.04-minimal-cloudimg-amd64.img"
+    customized: false
+    customize_command_pattern: >
+      LIBGUESTFS_BACKEND=direct virt-customize -a $TMPPATH
+      --firstboot-command 'sh -c "hostname > /var/www/html/id"'
+      --install iperf3,iputils-ping,ncat,nginx,vlan
+      --run-command 'echo "[Unit]\nDescription=iperf3 server on port %i\nAfter=syslog.target network.target\n\n[Service]\nExecStart=/usr/bin/iperf3 -s -p %i\nRestart=always\nUser=root\n\n[Install]\nWantedBy=multi-user.target\nDefaultInstance=5201\n"
+      > /etc/systemd/system/iperf3-server@.service'
+      --run-command 'systemctl enable iperf3-server@5201'
+      --run-command 'echo "8021q" >> /etc/modules'
+      --run-command
+      'echo "network:\n  version: 2\n  vlans:\n    vlan101:\n      dhcp4: true\n      dhcp4-overrides:\n        use-routes: false\n      dhcp6: true\n      dhcp6-overrides:\n        use-routes: false\n      id: 101\n      link: ens3\n"
+      > /etc/netplan/75-tobiko-vlan.yaml'
