--- a/requirements.txt
+++ b/requirements.txt
@@ -28,5 +28,6 @@ python-novaclient>=17.2.1       # Apache-2.0
 python-octaviaclient>=2.2.0     # Apache-2.0
 python-openstackclient>=5.4.0   # Apache-2.0
 PyYAML>=5.4.1                   # MIT
+setuptools!=24.0.0,!=34.0.0,!=34.0.1,!=34.0.2,!=34.0.3,!=34.1.0,!=34.1.1,!=34.2.0,!=34.3.0,!=34.3.1,!=34.3.2,!=36.2.0,>=21.0.0;python_version>='3.12' # PSF/ZPL
 sshtunnel>=0.3.1                # MIT
 testtools>=2.5.0                # MIT
