[tobiko-inventory] Set to empty string the default ansible_host value
Change-Id: I0a62df777323509813062fd432bafcaf4058fcd2

--- a/roles/tobiko-inventory/tasks/main.yaml
+++ b/roles/tobiko-inventory/tasks/main.yaml
@@ -37,7 +37,7 @@
   vars:
     hostname: '{{ item.0 }}'
     varname: '{{ item.1 }}'
-    value: '{{ hostvars[hostname][varname] }}'
+    value: '{{ hostvars[hostname][varname] | default("") }}'
   loop: "{{ hostvars.keys() | product(['ansible_host']) | list }}"
   loop_control:
     label: '{{ hostname }}.{{ varname }} = {{ value }}'
