Make ubuntu_interface configurable again
With some recent changes, the virt-customize command that modifies the
ubuntu guest image was broken: the interface name was hardcoded to
"ens3" and in some cases it should be set to "enp3s0". This patch makes
the value it configurable.

Change-Id: If31d9d998931253cbea9ae5310e2c36b6b7e2ce9

--- a/roles/tobiko-common/defaults/main.yaml
+++ b/roles/tobiko-common/defaults/main.yaml
@@ -72,5 +72,5 @@ download_images:
       --run-command 'systemctl enable iperf3-server@5201'
       --run-command 'echo "8021q" >> /etc/modules'
       --run-command
-      'echo "network:\n  version: 2\n  vlans:\n    vlan101:\n      dhcp4: true\n      dhcp4-overrides:\n        use-routes: false\n      dhcp6: true\n      dhcp6-overrides:\n        use-routes: false\n      id: 101\n      link: ens3\n"
+      'echo "network:\n  version: 2\n  vlans:\n    vlan101:\n      dhcp4: true\n      dhcp4-overrides:\n        use-routes: false\n      dhcp6: true\n      dhcp6-overrides:\n        use-routes: false\n      id: 101\n      link: {{ ubuntu_nic_name | default('ens3') }}\n"
       > /etc/netplan/75-tobiko-vlan.yaml'
