--- a/roles/tobiko-configure/tasks/main.yaml
+++ b/roles/tobiko-configure/tasks/main.yaml
@@ -31,6 +31,12 @@
           value: True
         {%   endif %}
         {% endfor %}
+        {% if ubuntu_nic_name is defined %}
+        - section: ubuntu
+          option: interface_name
+          value: "{{ ubuntu_nic_name }}"
+        {% endif %}
+
   vars:
     sections: "{{ test_default_conf | combine(test_conf, recursive=True) }}"
 
