--- a/roles/tobiko-common/defaults/main.yaml
+++ b/roles/tobiko-common/defaults/main.yaml
@@ -56,6 +56,7 @@ test_log_file: '{{ test_report_dir | realpath }}/tobiko.log'
 # Local where test cases results are being collected to
 test_collect_dir: '{{ test_src_dir | realpath }}/{{ test_report_name }}'
 
+
 # --- download-images options -------------------------------------------------
 download_images_dir: "{{ ansible_user_dir }}/.downloaded-images"
 download_images:
@@ -72,5 +73,10 @@ download_images:
       --run-command 'systemctl enable iperf3-server@5201'
       --run-command 'echo "8021q" >> /etc/modules'
       --run-command
-      'echo "network:\n  version: 2\n  vlans:\n    vlan101:\n      dhcp4: true\n      dhcp4-overrides:\n        use-routes: false\n      dhcp6: true\n      dhcp6-overrides:\n        use-routes: false\n      id: 101\n      link: {{ ubuntu_nic_name | default('ens3') }}\n"
+      'echo "network:\n  version: 2\n  vlans:\n    vlan101:\n      dhcp4: true\n      dhcp4-overrides:\n        use-routes: false\n      dhcp6: true\n      dhcp6-overrides:\n        use-routes: false\n      id: 101\n      link: {{ ubuntu_nic_name }}\n"
       > /etc/netplan/75-tobiko-vlan.yaml'
+
+# NIC name expected on Ubuntu VM instances.
+# Depending on the openstack version, it has been observed the Ubuntu VM
+# instances are created with an interface named 'ens3' or 'enp3s0'
+ubuntu_nic_name: 'ens3'
